@@ -207,7 +207,6 @@ public class OrderWritePlatformServiceImpl implements OrderWritePlatformService 
 
 	}
 	
-    @Transactional
 	@Override
 	public CommandProcessingResult createOrder(Long clientId,JsonCommand command) {
 	
@@ -705,8 +704,10 @@ public class OrderWritePlatformServiceImpl implements OrderWritePlatformService 
 				if (requstStatus != null && plan!=null) {
 					GlobalConfigurationProperty configurationProperty=this.configurationRepository.findOneByName(CPE_TYPE);
 					AllocationDetailsData detailsData = this.allocationReadPlatformService.getTheHardwareItemDetails(command.entityId(),configurationProperty.getValue());
-					ProcessRequest processRequest = new ProcessRequest(order.getClientId(),
-						order.getId(),plan.getProvisionSystem(), 'N', null, requstStatus,new Long(0));
+					/*ProcessRequest processRequest = new ProcessRequest(order.getClientId(),
+						order.getId(),plan.getProvisionSystem(), 'N', null, requstStatus,new Long(0));*/
+					ProcessRequest processRequest=new ProcessRequest(Long.valueOf(0),order.getClientId(),order.getId(),plan.getProvisionSystem(),requstStatus
+							,'N','N');
 				  processRequest.setNotify();
 				  List<OrderLine> orderLineData = order.getServices();
 				  	for (OrderLine orderLine : orderLineData) {
